--- a/documentation/specification.tex
+++ b/documentation/specification.tex
@@ -32,8 +32,9 @@
 2D felülnézetes lövöldözős játék tankokkal, egy és többjátékos módban
 
 \begin{itemize}
-\item[] \textbf{Kardos Bálint -} 
-\item[] \textbf{Bauer Péter -}
+\item[] 14. Csoport:
+\item[] \textbf{Kardos Bálint - ZI84PX} 
+\item[] \textbf{Bauer Péter - FUHTUD}
 \item[] \textbf{Murányi Péter - A74MW9}
 \end{itemize}
 
