Spec & gitignore updated

--- a/documentation/specification.tex
+++ b/documentation/specification.tex
@@ -43,7 +43,7 @@
 \item[] Játékmenet:
 
 \begin{itemize}
-\item[•] A játékosnak egy 2D grid-en tud mozogni négy irányba
+\item[•] A játékos egy 2D grid-en tud mozogni négy irányba
 \item[•] A tankkal egyes lövéseket tud leadni megadott maximális időközzel
 \item[•] A pályán falak vannak elhelyezve melyek akadályt jelentenek a tankoknak és lövedékeknek
 \item[•] A játékos nehézségi szinttől függően adott mennyiségű lövést tud elviselni mielőtt veszít
